--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,11 @@
-name: Create Release
+name: Create Release on New Tag
 
 on:
-  push:
-    tags:
-      - 'test-tag-v*'  # Trigger when a new tag is created in the format 'test-tag-v*'
+  workflow_run:
+    workflows:
+      - Auto-Increment Version Tag  # Name of Script 1
+    types:
+      - completed  # Trigger only after Script 1 completes
 
 jobs:
   create-release:
@@ -14,40 +16,40 @@ jobs:
       id-token: write
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Get Latest Tag
-      id: get_latest_tag
-      run: |
-        # Get the latest tag pushed
-        latest_tag=${GITHUB_REF#refs/tags/}
-        echo "latest_tag=$latest_tag" >> $GITHUB_ENV
+      - name: Get Latest Tag
+        id: get_latest_tag
+        run: |
+          # Get the latest tag pushed
+          latest_tag=${GITHUB_REF#refs/tags/}
+          echo "latest_tag=$latest_tag" >> $GITHUB_ENV
 
-    - name: Get Previous Tag
-      id: get_previous_tag
-      run: |
-        # Get all tags and sort them
-        tags=$(git tag --list "test-tag-v*" | sort -V)
-        
-        # Find the previous tag (exclude the latest tag)
-        previous_tag=$(echo "$tags" | grep -B 1 "$latest_tag" | head -n 1)
-        echo "previous_tag=$previous_tag" >> $GITHUB_ENV
+      - name: Get Previous Tag
+        id: get_previous_tag
+        run: |
+          # Get all tags and sort them
+          tags=$(git tag --list "test-tag-v*" | sort -V)
+          
+          # Find the previous tag (exclude the latest tag)
+          previous_tag=$(echo "$tags" | grep -B 1 "$latest_tag" | head -n 1)
+          echo "previous_tag=$previous_tag" >> $GITHUB_ENV
 
-    - name: Generate Release Notes
-      id: generate_release_notes
-      run: |
-        # Generate release notes by comparing the latest and previous tags
-        release_notes=$(git log --oneline ${previous_tag}..${latest_tag})
-        echo "release_notes=$release_notes" >> $GITHUB_ENV
+      - name: Generate Release Notes
+        id: generate_release_notes
+        run: |
+          # Generate release notes by comparing the latest and previous tags
+          release_notes=$(git log --oneline ${previous_tag}..${latest_tag})
+          echo "release_notes=$release_notes" >> $GITHUB_ENV
 
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${ env.latest_tag }
-        name: "Release ${ env.latest_tag } - $(date +'%d-%m-%Y')"
-        body: |
-          ### Release Notes:
-          ${ env.release_notes }
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${ env.latest_tag }
+          name: "Release ${ env.latest_tag } - $(date +'%d-%m-%Y')"
+          body: |
+            ### Release Notes:
+            ${ env.release_notes }
+        env:
+          GITHUB_TOKEN: ${ secrets.GITHUB_TOKEN }
