Fix workflow run issue.

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Get Latest Tag
         id: get_latest_tag
         run: |
-          latest_tag=${GITHUB_REF#refs/tags/}
+          # Get the latest tag matching the pattern "test-tag-v*"
+          latest_tag=$(git tag --list "test-tag-v*" | sort -V | tail -n 1)
           echo "latest_tag=$latest_tag" >> $GITHUB_ENV
           echo "Latest tag found: $latest_tag"
 
