--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -56,15 +56,24 @@ jobs:
         run: |
           latest_tag=${{ env.latest_tag }}
           previous_tag=${{ env.previous_tag }}
-
+          
           if [[ -z "$previous_tag" ]]; then
-            echo "No previous tag found. Generating release notes from the beginning of the repository."
+            # If no previous tag, generate notes from the start
             release_notes=$(git log --oneline "$latest_tag")
+            release_message="Release notes generated from the beginning of the repository to $latest_tag."
           else
             release_notes=$(git log --oneline "$previous_tag".."$latest_tag")
+            release_message="Release notes generated from $previous_tag to $latest_tag."
           fi
-
+          
+          if [ -z "$release_notes" ]; then
+            echo "Warning: No commits found for release notes."
+          fi
+          
           echo "release_notes=$release_notes" >> $GITHUB_ENV
+          echo "release_message=$release_message" >> $GITHUB_ENV
+          echo "Generated release notes: $release_notes"
+          echo "Release message: $release_message"
 
       - name: Prepare Release Name
         id: prepare_release_name
@@ -81,6 +90,8 @@ jobs:
           name: ${{ env.release_name }}
           body: |
             ### Release Notes:
+            ${{ env.release_message }}
+            
             ${{ env.release_notes }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
